# docs/swagger.yaml
@@ -1,12 +1,6 @@
 basePath: /api/v1
 definitions:
-  httperr.HTTPError:
-    properties:
-      detail: {}
-      message:
-        type: string
-    type: object
-  queries.CreatePanelParams:
+  apiv1.CreatePanelInput:
     properties:
       clientId:
         type: string
@@ -15,6 +9,36 @@ definitions:
       name:
         type: string
       url:
+        type: string
+    required:
+    - clientId
+    - clientSecret
+    - name
+    - url
+    type: object
+  apiv1.UpdatePanelInput:
+    properties:
+      clientId:
+        type: string
+      clientSecret:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      url:
+        type: string
+    required:
+    - clientId
+    - clientSecret
+    - id
+    - name
+    - url
+    type: object
+  httperr.HTTPError:
+    properties:
+      detail: {}
+      message:
         type: string
     type: object
   queries.Panel:
@@ -35,31 +59,6 @@ definitions:
       url:
         type: string
     type: object
-  queries.UpdatePanelParams:
-    properties:
-      clientId:
-        type: string
-      clientSecret:
-        type: string
-      id:
-        example: "0"
-        type: string
-      name:
-        type: string
-      url:
-        type: string
-    type: object
-  server.PaginationResult-queries_Panel:
-    properties:
-      current:
-        type: integer
-      list:
-        items:
-          $ref: '#/definitions/queries.Panel'
-        type: array
-      total:
-        type: integer
-    type: object
 host: localhost:3000
 info:
   contact: {}
@@ -67,7 +66,7 @@ info:
   title: Qinglong Envs
   version: "1.0"
 paths:
-  /api/panels:
+  /panels:
     get:
       consumes:
       - application/json
@@ -78,7 +77,9 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/server.PaginationResult-queries_Panel'
+            items:
+              $ref: '#/definitions/queries.Panel'
+            type: array
         "400":
           description: Bad Request
           schema:
@@ -100,7 +101,7 @@ paths:
         name: input
         required: true
         schema:
-          $ref: '#/definitions/queries.CreatePanelParams'
+          $ref: '#/definitions/apiv1.CreatePanelInput'
       produces:
       - application/json
       responses:
@@ -117,11 +118,46 @@ paths:
       summary: 创建面板
       tags:
       - panel
-  /api/panels/{id}:
+    put:
+      consumes:
+      - application/json
+      description: 更新面板
+      parameters:
+      - description: 创建面板
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/apiv1.UpdatePanelInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/queries.Panel'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httperr.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httperr.HTTPError'
+      summary: 更新面板
+      tags:
+      - panel
+  /panels/{id}:
     delete:
       consumes:
       - application/json
       description: 删除面板
+      parameters:
+      - description: 面板ID
+        in: path
+        name: id
+        required: true
+        type: integer
       produces:
       - application/json
       responses:
@@ -142,6 +178,12 @@ paths:
       consumes:
       - application/json
       description: 获取面板
+      parameters:
+      - description: 面板ID
+        in: path
+        name: id
+        required: true
+        type: integer
       produces:
       - application/json
       responses:
@@ -158,35 +200,6 @@ paths:
           schema:
             $ref: '#/definitions/httperr.HTTPError'
       summary: 获取面板
-      tags:
-      - panel
-    put:
-      consumes:
-      - application/json
-      description: 更新面板
-      parameters:
-      - description: 更新面板
-        in: body
-        name: input
-        required: true
-        schema:
-          $ref: '#/definitions/queries.UpdatePanelParams'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/queries.Panel'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/httperr.HTTPError'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/httperr.HTTPError'
-      summary: 更新面板
       tags:
       - panel
 swagger: "2.0"
