# internal/server/api/v1/panel.go
@@ -1,4 +1,4 @@
-package v1
+package apiv1
 
 import (
 	"database/sql"
@@ -6,8 +6,39 @@ import (
 	"net/http"
 	"qinglong-envs/internal/db/queries"
 	"qinglong-envs/internal/httperr"
-	"qinglong-envs/internal/server"
 )
+
+type (
+	CreatePanelInput struct {
+		Name         string `json:"name" validate:"required,min=1,max=64"`
+		Url          string `json:"url" validate:"required,url"`
+		ClientID     string `json:"clientId" validate:"required,min=1,max=128"`
+		ClientSecret string `json:"clientSecret" validate:"required,min=1,max=128"`
+	}
+
+	UpdatePanelInput struct {
+		ID int `json:"id" validate:"required"`
+		CreatePanelInput
+	}
+)
+
+func (i *CreatePanelInput) Q() queries.CreatePanelParams {
+	return queries.CreatePanelParams{
+		Name:         i.Name,
+		Url:          i.Url,
+		ClientID:     i.ClientID,
+		ClientSecret: i.ClientSecret,
+	}
+}
+func (i *UpdatePanelInput) Q() queries.UpdatePanelParams {
+	return queries.UpdatePanelParams{
+		ID:           i.ID,
+		Name:         i.Name,
+		Url:          i.Url,
+		ClientID:     i.ClientID,
+		ClientSecret: i.ClientSecret,
+	}
+}
 
 // CreatePanel 创建面板
 //
@@ -16,22 +47,29 @@ import (
 //	@Tags			panel
 //	@Accept			json
 //	@Produce		json
-//	@Param			input	body		queries.CreatePanelParams	true	"创建面板"
+//	@Param			input	body	CreatePanelInput	true	"创建面板"
 //	@Success		200
-//	@Failure		400		{object}	httperr.HTTPError
-//	@Failure		500		{object}	httperr.HTTPError
-//	@Router			/api/panels [post]
+//	@Failure		400	{object}	httperr.HTTPError
+//	@Failure		500	{object}	httperr.HTTPError
+//	@Router			/panels [post]
 func (h *Handlers) CreatePanel(w http.ResponseWriter, r *http.Request) {
-	var input queries.CreatePanelParams
-	err := server.BindJSON(r, &input)
+	var input CreatePanelInput
+	err := h.BindJSON(r, &input)
 	if err != nil {
-		server.WriteErr(w, err)
+		h.WriteErr(w, err)
+		return
 	}
-	resp, err := h.queries.CreatePanel(r.Context(), input)
+	err = h.Validate(input)
 	if err != nil {
-		server.WriteErr(w, err)
+		h.WriteErr(w, err)
+		return
 	}
-	server.WriteJSON(w, resp)
+	resp, err := h.queries.CreatePanel(r.Context(), input.Q())
+	if err != nil {
+		h.WriteErr(w, err)
+		return
+	}
+	h.WriteJSON(w, resp)
 }
 
 // UpdatePanel 更新面板
@@ -41,21 +79,21 @@ func (h *Handlers) CreatePanel(w http.ResponseWriter, r *http.Request) {
 //	@Tags			panel
 //	@Accept			json
 //	@Produce		json
-//	@Param			input	body		queries.UpdatePanelParams	true	"更新面板"
+//	@Param			input	body		UpdatePanelInput	true	"创建面板"
 //	@Success		200		{object}	queries.Panel
 //	@Failure		400		{object}	httperr.HTTPError
 //	@Failure		500		{object}	httperr.HTTPError
-//	@Router			/api/panels/{id} [put]
+//	@Router			/panels [put]
 func (h *Handlers) UpdatePanel(w http.ResponseWriter, r *http.Request) {
-	var input queries.UpdatePanelParams
-	err := server.BindJSON(r, &input)
+	var input UpdatePanelInput
+	err := h.BindJSON(r, &input)
 	if err != nil {
-		server.WriteErr(w, err)
+		h.WriteErr(w, err)
 		return
 	}
-	err = h.queries.UpdatePanel(r.Context(), input)
+	err = h.queries.UpdatePanel(r.Context(), input.Q())
 	if err != nil {
-		server.WriteErr(w, err)
+		h.WriteErr(w, err)
 		return
 	}
 }
@@ -67,18 +105,21 @@ func (h *Handlers) UpdatePanel(w http.ResponseWriter, r *http.Request) {
 //	@Tags			panel
 //	@Accept			json
 //	@Produce		json
+//	@Param			id	path	int	true	"面板ID"
 //	@Success		200
-//	@Failure		400		{object}	httperr.HTTPError
-//	@Failure		500		{object}	httperr.HTTPError
-//	@Router			/api/panels/{id} [delete]
+//	@Failure		400	{object}	httperr.HTTPError
+//	@Failure		500	{object}	httperr.HTTPError
+//	@Router			/panels/{id} [delete]
 func (h *Handlers) DeletePanel(w http.ResponseWriter, r *http.Request) {
-	id, err := server.GetIntInPath(r, "id")
+	id, err := h.GetIntInPath(r, "id")
 	if err != nil {
-		server.WriteErr(w, err)
+		h.WriteErr(w, err)
+		return
 	}
 	err = h.queries.DeletePanelByID(r.Context(), id)
 	if err != nil {
-		server.WriteErr(w, err)
+		h.WriteErr(w, err)
+		return
 	}
 }
 
@@ -89,23 +130,28 @@ func (h *Handlers) DeletePanel(w http.ResponseWriter, r *http.Request) {
 //	@Tags			panel
 //	@Accept			json
 //	@Produce		json
-//	@Success		200		{object}	queries.Panel
-//	@Failure		400		{object}	httperr.HTTPError
-//	@Failure		500		{object}	httperr.HTTPError
-//	@Router			/api/panels/{id} [get]
+//	@Param			id	path		int	true	"面板ID"
+//	@Success		200	{object}	queries.Panel
+//	@Failure		400	{object}	httperr.HTTPError
+//	@Failure		500	{object}	httperr.HTTPError
+//	@Router			/panels/{id} [get]
 func (h *Handlers) GetPanelById(w http.ResponseWriter, r *http.Request) {
-	id, err := server.GetIntInPath(r, "id")
+	id, err := h.GetIntInPath(r, "id")
 	if err != nil {
-		server.WriteErr(w, err)
+		h.WriteErr(w, err)
+		return
 	}
 	resp, err := h.queries.GetPanelByID(r.Context(), id)
 	if err != nil {
 		if errors.Is(err, sql.ErrNoRows) {
 			httperr.NotFound("未找到面板").Out(w)
+			return
 		}
-		server.WriteErr(w, err)
+		h.WriteErr(w, err)
+		return
 	}
-	server.WriteJSON(w, resp)
+	h.WriteJSON(w, resp)
+	return
 }
 
 // ListPanels 获取面板列表
@@ -115,20 +161,19 @@ func (h *Handlers) GetPanelById(w http.ResponseWriter, r *http.Request) {
 //	@Tags			panel
 //	@Accept			json
 //	@Produce		json
-//	@Success		200		{object}	server.PaginationResult[queries.Panel]
-//	@Failure		400		{object}	httperr.HTTPError
-//	@Failure		500		{object}	httperr.HTTPError
-//	@Router			/api/panels [get]
+//	@Success		200	{array}		queries.Panel
+//	@Failure		400	{object}	httperr.HTTPError
+//	@Failure		500	{object}	httperr.HTTPError
+//	@Router			/panels [get]
 func (h *Handlers) ListPanels(w http.ResponseWriter, r *http.Request) {
-	panels, err := h.queries.ListPanels(
-		r.Context(), queries.ListPanelsParams{
-			Limit: 99, Offset: 0,
-		})
+	panels, err := h.queries.ListPanels(r.Context())
 	if err != nil {
 		if errors.Is(err, sql.ErrNoRows) {
-			server.WriteJSON(w, server.NewPaginationResult(1, 1, []*any{}))
+			h.WriteJSON(w, []*any{})
+			return
 		}
-		server.WriteErr(w, err)
+		h.WriteErr(w, err)
+		return
 	}
-	server.WriteJSON(w, server.NewPaginationResult(1, 1, panels))
+	h.WriteJSON(w, panels)
 }
