# internal/server/handler.go
@@ -3,12 +3,21 @@ package server
 import (
 	"encoding/json"
 	"errors"
+	"github.com/go-playground/validator/v10"
 	"net/http"
 	"qinglong-envs/internal/httperr"
 	"strconv"
 )
 
-func WriteJSON(w http.ResponseWriter, resp any) {
+type Handler struct {
+	validate *validator.Validate
+}
+
+func NewHandler(validate *validator.Validate) *Handler {
+	return &Handler{validate: validate}
+}
+
+func (h *Handler) WriteJSON(w http.ResponseWriter, resp any) {
 	if resp == nil {
 		w.WriteHeader(http.StatusNoContent)
 		return
@@ -18,7 +27,7 @@ func WriteJSON(w http.ResponseWriter, resp any) {
 	json.NewEncoder(w).Encode(resp)
 }
 
-func WriteErr(w http.ResponseWriter, err error) {
+func (h *Handler) WriteErr(w http.ResponseWriter, err error) {
 	var httpErr *httperr.HTTPError
 	if !errors.As(err, &httpErr) {
 		httpErr = httperr.InternalServerError(err.Error())
@@ -26,7 +35,7 @@ func WriteErr(w http.ResponseWriter, err error) {
 	httpErr.Out(w)
 }
 
-func GetIntInPath(r *http.Request, name string) (int, error) {
+func (h *Handler) GetIntInPath(r *http.Request, name string) (int, error) {
 	pathId := r.PathValue(name)
 	id, err := strconv.Atoi(pathId)
 	if err != nil {
@@ -35,7 +44,7 @@ func GetIntInPath(r *http.Request, name string) (int, error) {
 	return id, nil
 }
 
-func BindJSON(r *http.Request, i any) error {
+func (h *Handler) BindJSON(r *http.Request, i any) error {
 	if r.Header.Get("Content-Type") != "application/json" {
 		return httperr.InputError("invalid content type")
 	}
@@ -44,6 +53,14 @@ func BindJSON(r *http.Request, i any) error {
 		return httperr.InputError("invalid json body")
 	}
 	return nil
+}
+
+func (h *Handler) Validate(s any) error {
+	err := h.validate.Struct(s)
+	if err != nil {
+		return httperr.InputError("input validation error").WithDetail(err.Error())
+	}
+	return err
 }
 
 type PaginationParams struct {
@@ -57,11 +74,11 @@ func (p *PaginationParams) Offset() int {
 
 // PaginationResult PaginationResult[T]
 //
-//	@Description		分页查询结果
+//	@Description	分页查询结果
 type PaginationResult[T any] struct {
-	Current int `json:"current"`
-	Total   int `json:"total"`
-	List    []T `json:"list"`
+	Current int  `json:"current"`
+	Total   int  `json:"total"`
+	List    []*T `json:"list"`
 }
 
 func NewPaginationResult[T any](current, total int, list []*T) *PaginationResult[T] {
